--- a/styles/base.less
+++ b/styles/base.less
@@ -155,6 +155,10 @@ atom-text-editor .search-results .marker.current-result .region,
 }
 
 .punctuation {
+  &.parenthesis {
+    color: @gray;
+  }
+
   &.separator {
     color: @gray;
   }
@@ -315,7 +319,7 @@ atom-text-editor .search-results .marker.current-result .region,
     color: @orange;
   }
 
-  &.raw.inline {
+  &.raw {
     color: @green;
   }
 }
